--- a/HW.html
+++ b/HW.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="Cap.css">
-    <title>Capstone</title>
+    <link rel="stylesheet" href="Cap2.css">
+    <title>Capstone HW</title>
 </head>
+
 <body>
 
     <div class="topnav">
@@ -16,6 +18,8 @@
 
     </div>
 
-
+    <h1>Welcome To Nikhil's Restaurant!</h1>
+    <img src="menu.png" width="600px">
 </body>
+
 </html>
